Actualizacion de archivos

--- a/Agenda-B/Views/Cuenta/IniciarSesion.cshtml
+++ b/Agenda-B/Views/Cuenta/IniciarSesion.cshtml
@@ -23,7 +23,7 @@
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
         <div class="row col-4 offset-8 form-group">
-            <input type="submit" value="Iniciar Sesion" class="btn btn-outline-primary" />
+            <input type="submit" value="Iniciar Sesión" class="btn btn-outline-primary" />
         </div>
     </form>
 </div>
