--- a/Agenda-B/Views/Cuenta/Registrarse.cshtml
+++ b/Agenda-B/Views/Cuenta/Registrarse.cshtml
@@ -41,7 +41,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="col-6 form-group">
-                <label asp-for="ConfirmacionPassword" class="control-label"></label>
+                <label asp-for="ConfirmacionPassword" class="control-label">Confirmacion de Contraseña</label>
                 <input asp-for="ConfirmacionPassword" class="form-control" />
                 <span asp-validation-for="ConfirmacionPassword" class="text-danger"></span>
             </div>
@@ -59,8 +59,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="row col-4 offset-8 form-group">
-                <input type="submit" value="Finalizar" class="btn btn-outline-primary" />
+            <div class="row col-9 offset-8 form-group">
+                <input type="submit" value="Finalizar" class="btn btn-outline-primary" />    
             </div>
         </div>
     </form>
