--- a/Agenda-B/Views/Pacientes/Details.cshtml
+++ b/Agenda-B/Views/Pacientes/Details.cshtml
@@ -39,7 +39,7 @@
                 }
                 else
                 {
-                    <address>No tiene asignada una direccion.</address>
+                    <address>No tiene asignada una dirección.</address>
                 }
             </p>
         </div>
