--- a/Agenda-B/Views/Turnos/Cancelar.cshtml
+++ b/Agenda-B/Views/Turnos/Cancelar.cshtml
@@ -14,8 +14,8 @@
             <textarea asp-for="DescripcionCancelacion" class="form-control" ></textarea>
             <span asp-validation-for="DescripcionCancelacion" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <input type="submit" value="Cancelar" class="btn btn-primary" />
+        <div class="row col-4 offset-8 form-group">
+            <input type="submit" value="Cancelar" class="btn btn-outline-primary" />
         </div>
     </form>
 </div>
