--- a/Agenda-B/Views/Turnos/SeleccionarHorarios.cshtml
+++ b/Agenda-B/Views/Turnos/SeleccionarHorarios.cshtml
@@ -12,10 +12,10 @@
             <input type="hidden" name="PacienteId" asp-for="PacienteId" />
             <ul>
                 <li>
-                    @Html.DisplayNameFor(model => model.Profesional.NombreCompleto):  @Html.DisplayFor(model => model.Profesional.NombreCompleto)
+                    Profesional:  @Html.DisplayFor(model => model.Profesional.NombreCompleto)
                 </li>
                 <li>
-                    @Html.DisplayNameFor(model => model.Prestacion.Nombre):  @Html.DisplayFor(model => model.Prestacion.Nombre)
+                    Prestacion:  @Html.DisplayFor(model => model.Prestacion.Nombre)
                 </li>
                 <li>
                     @Html.DisplayNameFor(model => model.Prestacion.Duracion):  @Html.DisplayFor(model => model.Prestacion.Duracion)
