--- a/Agenda-B/Views/Turnos/SeleccionarPrestacion.cshtml
+++ b/Agenda-B/Views/Turnos/SeleccionarPrestacion.cshtml
@@ -13,7 +13,7 @@
                 <select name="prestacionId" id="prestacionId" class="form-control">
                     @foreach (Prestacion pres in ViewBag.ListadoPrestaciones)
                     {
-                        <option value="@pres.Id">@pres.Id -  @pres.Nombre</option>
+                        <option value="@pres.Id">@pres.Nombre</option>
                     }
                 </select>
             </div>
