--- a/Agenda-B/Views/Prestaciones/Create.cshtml
+++ b/Agenda-B/Views/Prestaciones/Create.cshtml
@@ -4,39 +4,39 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Crear</h1>
-
-<h4>Prestacion</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+<div class="container border bg-light">
+    <h4>Prestacion</h4>
+    <hr />
+    <form asp-action="Create">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="row">
+            <div class="col-4 form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="col-4 form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
                 <input asp-for="Descripcion" class="form-control" />
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
-            <div class="form-group">
+        </div>
+        <div class="row">
+            <div class="col-4 form-group">
                 <label asp-for="Duracion" class="control-label"></label>
-                <input asp-for="Duracion" class="form-control" value="HH:MM:SS"/>
+                <input asp-for="Duracion" class="form-control" vlue="@string.Format("{0}:{1}:{2}", Model.Duracion.Hours, Model.Duracion.Minutes, Model.Duracion.Seconds)"/>
                 <span asp-validation-for="Duracion" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="col-4 form-group">
                 <label asp-for="Precio" class="control-label"></label>
                 <input asp-for="Precio" class="form-control" />
                 <span asp-validation-for="Precio" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+        </div>
+        <div class="row col-4 offset-8 form-group">
+            <input type="submit" value="Crear" class="btn btn-outline-primary" />
+        </div>
+    </form>
 </div>
 
 <div>
