--- a/Agenda-B/Views/Profesionales/Delete.cshtml
+++ b/Agenda-B/Views/Profesionales/Delete.cshtml
@@ -4,78 +4,41 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Eliminar</h1>
-
 <h3>¿Esta seguro de eliminar este Profesional?</h3>
-<div>
-    <h4>Profesional</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Matricula)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Matricula)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Prestacion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Prestacion.Nombre)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HoraInicio)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HoraInicio)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HoraFin)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HoraFin)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DNI)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DNI)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefono)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefono)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaAlta)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaAlta)
-        </dd>
-    </dl>
-    
+<div class="container border bg-light">
+    <div class="row">
+        <div class="col-4">
+            <p> <strong>@Html.DisplayNameFor(model => model.Nombre): </strong> @Html.DisplayFor(model => model.NombreCompleto)</p>
+        </div>
+        <div class="col-4">
+            <p> <strong>@Html.DisplayNameFor(model => model.Email): </strong> @Html.DisplayFor(model => model.Email)</p>
+        </div>
+        <div class="col-4">
+            <p> <strong>@Html.DisplayNameFor(model => model.DNI): </strong> @Html.DisplayFor(model => model.DNI)</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4">
+            <p> <strong>@Html.DisplayNameFor(model => model.Telefono): </strong> @Html.DisplayFor(model => model.Telefono)</p>
+        </div>
+        <div class="col-4">
+            <p> <strong>@Html.DisplayNameFor(model => model.PrestacionId): </strong> @Html.DisplayFor(model => model.Prestacion.Nombre)</p>
+        </div>
+        <div class="col-4">
+            <p> <strong>@Html.DisplayNameFor(model => model.Matricula): </strong> @Html.DisplayFor(model => model.Matricula)</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4">
+            <p> <strong>@Html.DisplayNameFor(model => model.HoraInicio): </strong> @Html.DisplayFor(model => model.HoraInicio)</p>
+        </div>
+        <div class="col-4">
+            <p> <strong>@Html.DisplayNameFor(model => model.HoraFin): </strong> @Html.DisplayFor(model => model.HoraFin)</p>
+        </div>
+    </div>
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Borrar" class="btn btn-danger" /> |
+        <input type="submit" value="Borrar" class="btn btn-outline-danger" /> |
         <a asp-action="Index">Regresar a Profesionales</a>
     </form>
 </div>
