--- a/Agenda-B/Views/Turnos/Index.cshtml
+++ b/Agenda-B/Views/Turnos/Index.cshtml
@@ -1,18 +1,15 @@
-﻿@model IEnumerable<Agenda_B.Models.Turno>
+﻿@using Agenda_B.Helpers
+@model IEnumerable<Agenda_B.Models.Turno>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Turnos</h1>
 
-<p>
-    <a asp-action="SeleccionarPrestacion">Crear nuevo Turno</a>
-</p>
-@if (Model.Count() != 0)
-{
+<h6>Turnos</h6>
+<div class="container border bg-light">
     <table class="table">
-        <thead>
+        <thead class="thead-light">
             <tr>
                 <th>
                     @Html.DisplayNameFor(model => model.Fecha)
@@ -24,57 +21,54 @@
                     @Html.DisplayNameFor(model => model.Profesional)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Confirmado)
-                </th>
-                <th>
                     @Html.DisplayNameFor(model => model.Activo)
                 </th>
-                <th></th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Confirmado)
+                </th>
+
+                <th>@Alias.Acciones</th>
             </tr>
         </thead>
         <tbody>
-    @foreach (var item in Model)
-    {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Fecha)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Paciente.NombreCompleto)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Profesional.NombreCompleto)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Confirmado)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Activo)
-                </td>
-                <td>
-                    <a class="btn btn-primary" role="button" asp-action="Confirmar" asp-route-id="@item.Id">Confirmar</a> |
-                    <a class="btn btn-primary" role="button" asp-action="Details" asp-route-id="@item.Id">Detalles</a> |
-                    <a class="btn btn-danger" role="button" asp-action="Cancelar" asp-route-id="@item.Id">Cancelar</a>
-                </td>
-            </tr>
-    }
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Fecha)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Paciente.NombreCompleto)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Profesional.NombreCompleto)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Activo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Confirmado)
+                    </td>
 
-
-
+                    <td>
+                        <a class="btn btn-outline-primary" role="button" asp-action="Activar" asp-route-id="@item.Id">Activar</a>
+                        @if (!item.Confirmado)
+                        {
+                            <a class="btn btn-outline-success" role="button" asp-action="Confirmar" asp-route-id="@item.Id">Confirmar</a>
+                        }
+                        else
+                        {
+                            <a class="btn btn-outline-danger" role="button" asp-action="Cancelar" asp-route-id="@item.Id">Cancelar</a>
+                        }
+                    </td>
+                </tr>
+            }
         </tbody>
     </table>
-}
-else { 
-    <p>
-        No se registran turnos para usted.
-    </p>
-}
 
+</div>
+<div>
+    <a class="btn btn-sm btn-outline-dark mt-2" role="button" asp-controller="Turnos" asp-action="Cancelados">Turnos Cancelados</a>
 
-<asp:dropdownlist runat="server" id="ddlTest">
-    <asp:listitem text="Red" value="1"></asp:listitem>
-    <asp:listitem text="Black" value="2"></asp:listitem>
-    <asp:listitem text="Blue" value="3"></asp:listitem>
-    <asp:listitem text="Green" value="4"></asp:listitem>
-    <asp:listitem text="Yellow" value="5"></asp:listitem>
-</asp:dropdownlist>
+</div>
+
