--- a/Agenda-B/Views/Shared/_Layout.cshtml
+++ b/Agenda-B/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Centro Médico - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Centro Médico
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
